[package]
name = "base_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Base-Engine-Library.git"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
vulkano = "0.32.1"
log = "0.4"
env_logger = "0.9"

# To reduce performance artifacts
[profile.dev]
opt-level = 1 
