[package]
name = "base_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Base-Engine-Library"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
vulkano = "0.31.0"
log = "0.4"
env_logger = "0.10"
bytemuck = "1.12.1"
